--- a/converter.html
+++ b/converter.html
@@ -3,8 +3,8 @@
 <title>Minecraft seed converter</title>
 <head>
 <meta charset="utf-8">
-<script type="text/javascript" src="brython.js"></script>
-<script type="text/javascript" src="brython_stdlib.js"></script>
+<script type="text/javascript" src="http://brython.info/src/brython.js"></script>
+<script type="text/javascript" src="https://brython.info/src/brython_stdlib.js"></script>
 </head>
 
 <p align="center"><font size="7"><font face="URW Gothic"><strong>Minecraft seed converter</strong></font></font></p>
@@ -30,8 +30,6 @@ Please note that: <br>
 <script type="text/python">
 from browser import document, html
 
-#This work is licensed under a CC BY-NC-SA 4.0 License. 
-#Read it here: https://creativecommons.org/licenses/by-nc-sa/4.0/
 print("--------------------------------------------------")
 print("-------------Minecraft seed converter-------------")
 print("--------------------------------------------------")
