--- a/converter.html
+++ b/converter.html
@@ -10,7 +10,7 @@
 <p align="center"><font size="7"><font face="URW Gothic"><strong>Minecraft seed converter</strong></font></font></p>
 <p align="center"><font size="5"><font face="URW Gothic"><strong>Enter your minecraft world generation seed, and convert it to java or bedrock!</strong></font></font></p>
 
-<p align="center"><font size="3">This work is licensed under a <br> <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0 License</a>.</font></p>
+<p align="center"><font size="3">The license is available <a href="https://github.com/Malwprotector/mc-seed-converter/blob/main/LICENSE.md">here.</font></p>
 <p align="center"><font size="3">You can get the source code <a href="https://github.com/Malwprotector/mc-seed-converter">here.</a> <br>Click the button below to download <br> offline version.</font></p>
 <p align="center"><input type=button onclick=window.location.href='mc-seed-converter.py'; value="Download offline version (python3)"></p>
 
